[metadata]
name = 'pathchecker'
version = '0.0.1'
description = 'packaging test sample'
author = 'JJ'
author_email = 'me@un.known'
license = 'MIT/Apache-2.0'
url = 'https://github.com/_/pathchecker'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
